--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,9 @@
   <body>
     <header>
       <h1>Pokedex</h1>
-      <button id="logout-btn" style="position: absolute; right: 80px; top: 1.2rem; padding: 0.3rem 0.8rem; background: #ef4444; color: white; border: none; border-radius: 999px; cursor: pointer; font-family: 'Orbitron', sans-serif; font-size: 0.8rem;">Logout</button>
-      <div class="theme-toggle" role="presentation">
+      <div class="header-controls">
+        <button id="logout-btn">Logout</button>
+        <div class="theme-toggle" role="presentation">
         <input
           type="checkbox"
           id="theme-toggle"
@@ -53,6 +54,7 @@
             </svg>
           </span>
         </label>
+      </div>
       </div>
     </header>
     <main class="pokedex-layout">
