feat: Implement mobile view redesign with responsive layout and list/detail toggle

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -63,6 +64,9 @@
         <div id="pokemon-list" class="scroll-list"></div>
       </section>
       <section class="mainview">
+        <button id="back-to-list-btn" style="display: none;">
+            <i class="fas fa-arrow-left"></i> Back to List
+        </button>
         <div id="pokemon-details" class="details">
             <div class="max-w-6xl mx-auto p-8">
                 <h1 class="text-5xl font-bold mb-12 text-slate-800">Dragonite #149</h1>
