Implement Continue as Guest feature

--- a/public/auth.html
+++ b/public/auth.html
@@ -25,6 +25,7 @@
             <input type="password" id="signup-password" placeholder="Password" class="auth-input" required />
             <div class="error-message" id="signup-error"></div>
             <button type="submit" class="auth-btn">Sign Up</button>
+            <button type="button" class="auth-btn guest-btn" style="margin-top: 10px; background-color: #4a5568;">Continue as Guest</button>
         </form>
     </div>
 
@@ -40,6 +41,7 @@
             <input type="password" id="login-password" placeholder="Password" class="auth-input" required />
             <div class="error-message" id="login-error"></div>
             <button type="submit" class="auth-btn">Sign In</button>
+            <button type="button" class="auth-btn guest-btn" style="margin-top: 10px; background-color: #4a5568;">Continue as Guest</button>
         </form>
     </div>
 
